--- a/to_jl.html
+++ b/to_jl.html
@@ -81,18 +81,21 @@
 
       // 💗 ‼️ ‼️ 想要说的话在这里 💗
       const my_labels = [
-        "穿过云和烟，看大地温暖的浮现",
-        "你一语，你一言，是我最眷恋",
+        "穿过云和烟",
+		"看大地温暖的浮现",
+        "你一语，你一言",
+		"是我最眷恋",
 		"像 一阵春风吹过我侧脸",
 		"像 一场细雨落在我的鞋尖",
 		"不被察觉 每天",
 		"无声无息你的出现",
 		"逝去的歌，没能和你一起唱",
 		"但未来的路，想和你一起走",
-		"不被察觉 每天",
 		"所以，杨老师",
-		"我想成为突如其来温暖你的晴天",
-		"我想成为倾盘大雨你躲避的屋檐",
+		"我想成为",
+		"突如其来温暖你的晴天",
+		"我想成为",
+		"倾盘大雨你躲避的屋檐",
 		"我喜欢你",
 		"可以做我女朋友吗",
 		"你可以先不用回答",
